<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.willian.yunmusic.widget.RollView
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_roll_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_dot1"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@mipmap/red_point" />

            <ImageView
                android:id="@+id/iv_dot2"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginLeft="4dp"
                android:src="@mipmap/grey_point" />

            <ImageView
                android:id="@+id/iv_dot3"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginLeft="4dp"
                android:src="@mipmap/grey_point" />

            <ImageView
                android:id="@+id/iv_dot4"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginLeft="4dp"
                android:src="@mipmap/grey_point" />

            <ImageView
                android:id="@+id/iv_dot5"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginLeft="4dp"
                android:src="@mipmap/grey_point" />

            <ImageView
                android:id="@+id/iv_dot6"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginLeft="4dp"
                android:src="@mipmap/grey_point" />
        </LinearLayout>

    </com.willian.yunmusic.widget.RollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/recommend_icn_fm_selector" />

            <TextView
                style="@style/tv_caption_style"
                android:layout_marginTop="4dp"
                android:text="@string/personal_fm"
                android:textColor="@color/text_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/recommend_icn_birthday_selector" />

            <TextView
                style="@style/tv_caption_style"
                android:layout_marginTop="4dp"
                android:text="@string/recommend_song"
                android:textColor="@color/text_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/recommend_icn_upbill_selector" />

            <TextView
                style="@style/tv_caption_style"
                android:layout_marginTop="4dp"
                android:text="@string/new_song_top"
                android:textColor="@color/text_black" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_color" />
</LinearLayout>